packages/cli/tests/fixtures/errors/misconfigured/input/types.ts
import type { VariantProps } from "jade-garden";
import type { inputStyles } from ".";

export type Variants = VariantProps<typeof inputStyles>;
